# scard-binding-rs

./: Cargo.toml  README.md
afb-binding/: Cargo.toml
afb-binding/etc/: binder-scard.json  binding-nfc-acr122u.json  binding-nfc.json  binding-scard.json  binding-test.sh  build.rs  pcscd-client-test.json  provision-nfc.json  start-binder.sh
afb-binding/src/: binding.rs  verbs.rs
nfc-lib/: Cargo.toml
nfc-lib/capi/: build.rs  capi-map.h  capi-mod.rs
nfc-lib/src/: libso.rs  scard-nfc.rs
