[package]
name = "libnfc"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "capi/build.rs"

[dependencies]
afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}

[build-dependencies]
system-deps = "2.0"
bindgen    = ">=0.69"
cc = "1"

[features]
rpm_build = []

[package.metadata.system-deps]
libpcsclite = "1.9"

[lib]
name = "libnfc"
crate-type = ["lib"]
path = "src/libso.rs"


